--- a/GitHubStatus/Base.lproj/Main.storyboard
+++ b/GitHubStatus/Base.lproj/Main.storyboard
@@ -62,20 +62,31 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bHf-wH-T6K">
+                                <rect key="frame" x="16" y="350" width="343" height="259"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="259" id="AOo-eq-Gnq"/>
+                                    <constraint firstAttribute="width" constant="343" id="sNV-iZ-Tw8"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="leadingMargin" secondItem="k0O-K0-xfe" secondAttribute="leading" id="0gZ-BH-HDe"/>
                             <constraint firstItem="lZ2-0E-DxP" firstAttribute="top" secondItem="k0O-K0-xfe" secondAttribute="bottom" constant="8" id="0iW-lL-n2W"/>
                             <constraint firstItem="7Zg-3S-Pa2" firstAttribute="top" secondItem="0bF-Ze-WCL" secondAttribute="bottom" constant="8" id="31n-fl-fhI"/>
+                            <constraint firstItem="bHf-wH-T6K" firstAttribute="top" secondItem="lZ2-0E-DxP" secondAttribute="bottom" constant="8" id="3nX-pK-yP6"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="7Zg-3S-Pa2" secondAttribute="bottom" constant="20" id="4KB-8v-gEx"/>
                             <constraint firstAttribute="leadingMargin" secondItem="7Zg-3S-Pa2" secondAttribute="leading" id="ERb-yX-gYe"/>
+                            <constraint firstItem="7Zg-3S-Pa2" firstAttribute="top" secondItem="bHf-wH-T6K" secondAttribute="bottom" constant="8" id="HPI-4F-ScI"/>
                             <constraint firstItem="0bF-Ze-WCL" firstAttribute="top" secondItem="lZ2-0E-DxP" secondAttribute="bottom" constant="8" id="Hu9-xj-Or5"/>
                             <constraint firstAttribute="trailingMargin" secondItem="7Zg-3S-Pa2" secondAttribute="trailing" id="I0d-Q9-jUV"/>
                             <constraint firstAttribute="leadingMargin" secondItem="0bF-Ze-WCL" secondAttribute="leading" id="Lvm-xi-j6M"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="bHf-wH-T6K" secondAttribute="trailing" id="WaI-bx-1FK"/>
                             <constraint firstAttribute="leadingMargin" secondItem="lZ2-0E-DxP" secondAttribute="leading" id="aNV-oz-egV"/>
                             <constraint firstAttribute="trailingMargin" secondItem="0bF-Ze-WCL" secondAttribute="trailing" id="dSC-8U-rCx"/>
                             <constraint firstAttribute="trailingMargin" secondItem="lZ2-0E-DxP" secondAttribute="trailing" id="ePT-eP-QXp"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="bHf-wH-T6K" secondAttribute="leading" id="mxk-ys-S2f"/>
                             <constraint firstAttribute="trailingMargin" secondItem="k0O-K0-xfe" secondAttribute="trailing" id="nrD-lf-B06"/>
                             <constraint firstItem="k0O-K0-xfe" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="tZF-3G-QFu"/>
                         </constraints>
@@ -84,6 +95,7 @@
                     <connections>
                         <outlet property="bodyLabel" destination="0bF-Ze-WCL" id="TBh-Wh-ene"/>
                         <outlet property="lastUpdatedLabel" destination="k0O-K0-xfe" id="aNu-AY-yer"/>
+                        <outlet property="octocatImage" destination="bHf-wH-T6K" id="50X-jy-eFW"/>
                         <outlet property="statusLabel" destination="lZ2-0E-DxP" id="moQ-WP-NRf"/>
                     </connections>
                 </viewController>
